# serializer version: 1
# name: test_all_entities[sensor.homeassistant_analytics_spotify-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.homeassistant_analytics_spotify',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'spotify',
    'platform': 'analytics_insights',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'spotify_active_installations',
    'unit_of_measurement': 'active installations',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_spotify-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Homeassistant Analytics spotify',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'active installations',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.homeassistant_analytics_spotify',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '24388',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_youtube-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.homeassistant_analytics_youtube',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YouTube',
    'platform': 'analytics_insights',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'youtube_active_installations',
    'unit_of_measurement': 'active installations',
  })
# ---
# name: test_all_entities[sensor.homeassistant_analytics_youtube-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Homeassistant Analytics YouTube',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'active installations',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.homeassistant_analytics_youtube',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '339',
  })
# ---
